<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MyGit1</string>
    <string name="btn0" translatable="false">0</string>
    <string name="btn1" translatable="false">1</string>
    <string name="btn2" translatable="false">2</string>
    <string name="btn3" translatable="false">3</string>
    <string name="btn4" translatable="false">4</string>
    <string name="btn5" translatable="false">5</string>
    <string name="btn6" translatable="false">6</string>
    <string name="btn7" translatable="false">7</string>
    <string name="btn8" translatable="false">8</string>
    <string name="btn9" translatable="false">9</string>
    <string name="btnDecimal" translatable="false">．</string>
    <string name="btnPlus" translatable="false">＋</string>
    <string name="btnMinus" translatable="false">－</string>
    <string name="btnDiv" translatable="false">÷</string>
    <string name="btnMulti" translatable="false">×</string>
    <string name="btnNegative" translatable="false">±</string>
    <string name="btnClean" translatable="false">C</string>
    <string name="btnDelete" translatable="false">←</string>
    <string name="btnEqual" translatable="false">=</string>
    <string name="btnBracket" translatable="false">()</string>
    <string name="btnPercent" translatable="false">%</string>
    <string name="btnDivide" translatable="false">/</string>
    <string name="notImplemented" translatable="true">구현되지 않은 버튼</string>
    <string name="defaultResult" translatable="false">0</string>
</resources>
