<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

    <com.ken207.mygit1.MyEditText
            android:id="@+id/txtFormula"
            android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="8dp"
            android:gravity="end"
            android:textSize="36sp"
            android:text="@string/defaultResult"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" tools:text="123" android:textColorLink="#00EB0909"
            android:textColor="#333"
            app:fontFamily="@font/aclonica" android:inputType="textMultiLine"/>

    <TextView
            android:id="@+id/txtRslt"
            android:layout_width="0dp" android:layout_height="40dp" android:layout_margin="8dp"
            android:gravity="end"
            android:textSize="26sp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFormula"
            app:layout_constraintEnd_toEndOf="parent" tools:text="123" android:textColorLink="#00EB0909"
            android:textColor="#AAA"
            app:fontFamily="@font/aclonica"/>

    <Button
            android:id="@+id/btnDelete" android:text="@string/btnDelete"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnBracket"
            app:layout_constraintTop_toBottomOf="@id/txtRslt" style="@android:style/Widget.Holo.Button"/>

    <Button
            android:id="@+id/btnClean" android:text="@string/btnClean"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnBracket"
            app:layout_constraintTop_toBottomOf="@id/btnDelete" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btnBracket" android:text="@string/btnBracket"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btnClean" app:layout_constraintEnd_toStartOf="@id/btnPercent"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnClean" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btnPercent" android:text="@string/btnPercent"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btnBracket" app:layout_constraintEnd_toStartOf="@id/btnDivide"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnClean" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btnDivide" android:text="@string/btnDivide"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btnPercent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnClean" style="@android:style/Widget.Holo.Button"/>

    <Button
            android:id="@+id/btn7" android:text="@string/btn7"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn8"
            app:layout_constraintTop_toBottomOf="@id/btnClean" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btn8" android:text="@string/btn8"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn7" app:layout_constraintEnd_toStartOf="@id/btn9"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn7" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btn9" android:text="@string/btn9"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn8" app:layout_constraintEnd_toStartOf="@id/btnMulti"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn7" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btnMulti" android:text="@string/btnMulti"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn9" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn7" style="@android:style/Widget.Holo.Button"/>


    <Button
            android:id="@+id/btn4" android:text="@string/btn4"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn7" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btn5" android:text="@string/btn5"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn4" app:layout_constraintEnd_toStartOf="@id/btn6"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn4" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btn6" android:text="@string/btn6"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn5" app:layout_constraintEnd_toStartOf="@id/btnMinus"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn4" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btnMinus" android:text="@string/btnMinus"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn6" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn4" style="@android:style/Widget.Holo.Button"/>

    <Button
            android:id="@+id/btn1" android:text="@string/btn1"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintTop_toBottomOf="@+id/btn4" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btn2" android:text="@string/btn2"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn1" app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn1" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btn3" android:text="@string/btn3"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn2" app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn1" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btnPlus" android:text="@string/btnPlus"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn1" style="@android:style/Widget.Holo.Button"/>

    <Button
            android:id="@+id/btnNegative" android:text="@string/btnNegative"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@id/btn0"
            app:layout_constraintTop_toBottomOf="@id/btn1" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btn0" android:text="@string/btn0"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btnNegative" app:layout_constraintEnd_toStartOf="@id/btnDecimal"
            app:layout_constraintBaseline_toBaselineOf="@id/btnNegative" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btnDecimal" android:text="@string/btnDecimal"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btn0" app:layout_constraintEnd_toStartOf="@id/btnEqual"
            app:layout_constraintBaseline_toBaselineOf="@id/btnNegative" style="@android:style/Widget.Holo.Button"/>
    <Button
            android:id="@+id/btnEqual" android:text="@string/btnEqual"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1" app:layout_constraintStart_toEndOf="@id/btnDecimal" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/btnNegative" style="@android:style/Widget.Holo.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>